Header/Header.module.css
.header {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  color: var(--header-button-color, currentColor);

  background-color: var(
    --header-background-color,
    hsl(from var(--theme-color) h s calc(l / 2))
  );

  h1 {
    padding: 8px;
    margin: 8px;

    a {
      display: flex;
      flex-direction: row;
      align-items: center;
      gap: 8px;

      font-size: 0.8em;
      color: var(--header-foreground-color, #fff);
      font-weight: 700;
      text-transform: uppercase;
    }

    a:hover,
    a:focus-visible {
      filter: drop-shadow(
        0px 0px 8px
          rgba(
            from
              var(--header-shadow-color, var(--header-foreground-color, #fff)) r
              g b / 0.75
          )
      );
    }

    img {
      display: inline;
      aspect-ratio: 1 / 1;
      line-height: 1;
      height: 1em;
      width: 1em;
    }
  }

  .buttons {
    display: flex;
    flex-direction: row;
    gap: 8px;
    padding-right: 8px;

    button {
      aspect-ratio: 1 / 1;
      border-radius: 50%;

      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;

      background-color: transparent;
      font-size: 30px;
      padding: 8px;
      border-width: 0px;

      color: var(--header-button-color, currentColor);
    }

    button:hover,
    button:focus-visible {
      background-color: var(
        --header-button-color,
        rgba(from var(--button-color) r g b / 0.5)
      );
      color: var(--header-background-color, var(--theme-color));
    }
  }
}

